--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-sass": "~0.8.1",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jst": "~0.5.1",
+    "grunt-mustache": "~0.1.5"
   }
 }
