--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-sass": "~0.8.1",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jst": "~0.5.1",
-    "grunt-mustache": "~0.1.5"
+    "grunt-mustache": "~0.1.5",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
