--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-usemin": "~2.0.2",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-replace": "~0.5.1"
+    "grunt-replace": "~0.5.1",
+    "grunt-aws-s3": "~0.7.2"
   }
 }
